force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/BMCServiceDesk__CMDB_AttributeDefinition__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for all CMDB fields in each CMDB object.</description>
    <label>CMDB AttributeDefinition</label>
    <nameField>
        <label>Test</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMDB AttributeDefinitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>