force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__AttributeID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AttributeID__c</fullName>
    <externalId>true</externalId>
    <label>AttributeID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>