force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__AttributeType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AttributeType__c</fullName>
    <label>AttributeType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REGULAR</fullName>
                <default>true</default>
                <label>REGULAR</label>
            </value>
            <value>
                <fullName>CORE</fullName>
            </value>
            <value>
                <fullName>INTERNAL_CORE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>