force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__ClassName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClassName__c</fullName>
    <formula>BMCServiceDesk__ClassID__r.BMCServiceDesk__ClassName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClassName</label>
    <type>Text</type>
</CustomField>