force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__CustomProperty__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CustomProperty__c</fullName>
    <label>CustomProperty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>