force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__DataType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DataType__c</fullName>
    <label>DataType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Real</fullName>
            </value>
            <value>
                <fullName>Character</fullName>
            </value>
            <value>
                <fullName>Diary</fullName>
            </value>
            <value>
                <fullName>Selection</fullName>
            </value>
            <value>
                <fullName>Date/Time</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Attachment Field</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Attachment Pool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>