force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Default_Value__c</fullName>
    <label>Default Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>