force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__EnumType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__EnumType__c</fullName>
    <label>EnumType</label>
    <length>150</length>
    <type>Text</type>
</CustomField>