force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__FieldID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FieldID__c</fullName>
    <label>FieldID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>