force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__InstanceID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__InstanceID__c</fullName>
    <label>InstanceID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>