force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__MaxLength__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MaxLength__c</fullName>
    <label>MaxLength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>