force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__Precision__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Precision__c</fullName>
    <label>Precision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>