force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/fields/BMCServiceDesk__Values__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Values__c</fullName>
    <label>Values</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>