force-app/main/default/objects/BMCServiceDesk__CMDB_AttributeDefinition__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>BMCServiceDesk__AttributeID__c</columns>
    <columns>BMCServiceDesk__AttributeName__c</columns>
    <columns>BMCServiceDesk__ClassName__c</columns>
    <columns>BMCServiceDesk__ClassID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>